--- a/Libraries/SilverSolution.Core/SilverSolution.Core.csproj
+++ b/Libraries/SilverSolution.Core/SilverSolution.Core.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="DataAccess\EntityFramework\EfEntityRepositoryBase.cs" />
     <Compile Include="DataAccess\IEntityRepository.cs" />
+    <Compile Include="Entities\CommonEntity.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
