--- a/Libraries/SilverSolution.EFCodeFirst/SilverSolution.EFCodeFirst.csproj
+++ b/Libraries/SilverSolution.EFCodeFirst/SilverSolution.EFCodeFirst.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96B8CC65-F435-4C9F-8E72-E8DC337C7A60}</ProjectGuid>
+    <ProjectGuid>{5D4480A0-71AC-42F4-A846-5F9E26DCC1BC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SilverSolution.Entities</RootNamespace>
-    <AssemblyName>SilverSolution.Entities</AssemblyName>
+    <RootNamespace>SilverSolution.EFCodeFirst</RootNamespace>
+    <AssemblyName>SilverSolution.EFCodeFirst</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,20 +49,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\AuditableEntity.cs" />
-    <Compile Include="Abstract\IAuditableEntity.cs" />
-    <Compile Include="ComplexType\CustomerWithAddress.cs" />
-    <Compile Include="Concrete\Category.cs" />
-    <Compile Include="Concrete\Customer.cs" />
-    <Compile Include="Concrete\CustomerAddress.cs" />
+    <Compile Include="Database\DatabaseContext.cs" />
+    <Compile Include="Database\PromotoSeedData.cs" />
+    <Compile Include="Migrations\201701101444216_Silver.cs" />
+    <Compile Include="Migrations\201701101444216_Silver.Designer.cs">
+      <DependentUpon>201701101444216_Silver.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="Repositories\Abstract\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SilverSolution.Core\SilverSolution.Core.csproj">
       <Project>{0d22db8d-9a5f-40cc-86d0-4c3b96d195f4}</Project>
       <Name>SilverSolution.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SilverSolution.DataLayer\SilverSolution.DataLayer.csproj">
+      <Project>{d34f0224-57da-4e83-985d-7cec29e67699}</Project>
+      <Name>SilverSolution.DataLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SilverSolution.Entities\SilverSolution.Entities.csproj">
+      <Project>{96b8cc65-f435-4c9f-8e72-e8dc337c7a60}</Project>
+      <Name>SilverSolution.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201701101444216_Silver.resx">
+      <DependentUpon>201701101444216_Silver.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
