--- a/Libraries/SilverSolution.Business/SilverSolution.Business.csproj
+++ b/Libraries/SilverSolution.Business/SilverSolution.Business.csproj
@@ -41,10 +41,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Abstract\ICategoryService.cs" />
+    <Compile Include="Services\Abstract\ICustomerService.cs" />
+    <Compile Include="Services\Concrete\CategoryService.cs" />
+    <Compile Include="Services\Concrete\CustomerService.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Services\Abstract\" />
-    <Folder Include="Services\Concrete\" />
+    <ProjectReference Include="..\SilverSolution.Core\SilverSolution.Core.csproj">
+      <Project>{0d22db8d-9a5f-40cc-86d0-4c3b96d195f4}</Project>
+      <Name>SilverSolution.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SilverSolution.DataLayer\SilverSolution.DataLayer.csproj">
+      <Project>{d34f0224-57da-4e83-985d-7cec29e67699}</Project>
+      <Name>SilverSolution.DataLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SilverSolution.EFCodeFirst\SilverSolution.EFCodeFirst.csproj">
+      <Project>{5D4480A0-71AC-42F4-A846-5F9E26DCC1BC}</Project>
+      <Name>SilverSolution.EFCodeFirst</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SilverSolution.Entities\SilverSolution.Entities.csproj">
+      <Project>{96b8cc65-f435-4c9f-8e72-e8dc337c7a60}</Project>
+      <Name>SilverSolution.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
